force-app/main/default/objects/Service_Category__c/Service_Category__c.object-meta.xml
<CustomObject>
    <description>Represent a category for service for the selected service center</description>
    <label>Service Category</label>
    <nameField>
        <displayFormat>CAT-{00000000}</displayFormat>
        <label>Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>