force-app/main/default/objects/Service_Category__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accessories Installation</fullName>
            </value>
            <value>
                <fullName>Delivery Bay</fullName>
            </value>
            <value>
                <fullName>Grooming</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>