force-app/main/default/objects/Service_Category__c/fields/Interval_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Interval_Minutes__c</fullName>
    <label>Interval (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>