force-app/main/default/objects/Service_Category__c/fields/Service_Centre__c.field-meta.xml
<CustomField>
    <fullName>Service_Centre__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Centre</label>
    <referenceTo>Service_Centre_Master__c</referenceTo>
    <relationshipLabel>Service Categories</relationshipLabel>
    <relationshipName>Service_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>