force-app/main/default/objects/Service_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Centre__c</columns>
    <columns>Category__c</columns>
    <columns>Active__c</columns>
    <columns>Franchise__c</columns>
    <columns>Slots_per_Interval__c</columns>
    <columns>Interval_Minutes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>